opam-version: "1.2"
maintainer: "Christophe Troestler <Christophe.Troestler@umons.ac.be>"
authors: [ "Christophe Troestler <Christophe.Troestler@umons.ac.be>" ]
license: "LGPL-3.0 with OCaml linking exception"
homepage: "https://github.com/Chris00/ocaml-curve-sampling"
dev-repo: "https://github.com/Chris00/ocaml-curve-sampling.git"
bug-reports: "https://github.com/Chris00/ocaml-curve-sampling/issues"
doc: "https://Chris00.github.io/ocaml-curve-sampling/doc"
build: [
  [ "jbuilder" "subst" ] {pinned}
  [ "jbuilder" "build" "-p" name "-j" jobs ]
]
build-test: [[ "jbuilder" "runtest" "-p" name "-j" jobs ]]
depends: [
  "gg"
  "jbuilder"  {build & >="1.0+beta9"}
]
