(executables
 (names     clip nice osc abs dom)
 (libraries curve_sampling))

(rule
 (targets clip_gp.pdf)
 (deps    (:p clip.exe) clip.gp)
 (action (progn
          (run %{p})
          (run gnuplot clip.gp))))
(rule
 (targets clip.pdf)
 (deps    (:p clip.exe) clip.tex)
 (action (progn
          (run %{p})
          (run pdflatex -interaction=batchmode clip.tex))))

(rule
 (targets nice.pdf)
 (deps    (:p nice.exe) nice.gp)
 (action  (progn
           (run %{p})
           (run gnuplot nice.gp))))


(rule
 (targets osc.pdf)
 (deps    (:p osc.exe) osc.gp)
 (action  (progn
           (run %{p})
           (run gnuplot osc.gp))))

(rule
 (targets abs.pdf)
 (deps    (:p abs.exe) abs.gp)
 (action  (progn
           (run %{p})
           (run gnuplot abs.gp))))

(rule
 (targets dom.pdf)
 (deps    (:p dom.exe) dom.gp)
 (action  (progn
           (run %{p})
           (run gnuplot dom.gp))))

(alias
 (name runtest)
 (deps clip_gp.pdf nice.pdf osc.pdf abs.pdf dom.pdf))

(alias
 (name latex)
 (deps clip.pdf))
